adding unlocking via profile

--- a/docs/authentication/configuration/lockout.mdx
+++ b/docs/authentication/configuration/lockout.mdx
@@ -67,3 +67,12 @@ height={914}
 src="/docs/images/authentication/userlock_dashboard.png"
 alt=" "
 />
+
+Alternatively, you can unlock a user's account on their profile page by scrolling to the "Unlock user" section and selecting "Unlock user."
+
+<Images
+width={1512}
+height={914}
+src="/docs/images/authentication/userlock_profile.png"
+alt=" "
+/>
