--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -27,6 +27,33 @@ export const config = {
 
 With the recommended matcher, all routes are protected by Clerk's authentication middleware, with the exception of internal `/_next/` routes and static files. Static files are detected by matching on paths that end in `.+\..+`. If your middleware needs to run on all routes but you don't want Clerk to protect every route, use the [`ignoredRoutes` option](#options).
 
+### Default behaviour
+
+If there is no `afterAuth` present in the middleware, then `authMiddleware` will fall back to its default behaviour. The default bahaviour is:
+
+- If the [.env based settings](/references/nextjs/custom-signup-signin-pages#update-your-environment-variables) for the sign-in and sign-up routes are present, add those to any routes listed in `publicRoutes`.
+- If the .env based settings are not present, add `/sign-in` and `/sign-up` to any routes listed in `publicRoutes`.
+- Make all routes from `publicRoutes` public.
+- Configure all routes from `ignoredRoutes` to be ignored and return no auth related information.
+- Make all remaining routes protected.
+
+#### Example
+
+Assuming that the .env based settings are for sign-in and sign-up are set to /sign-in and /sign-up resepctively, the following `authMiddleware` would make the routes `/`, `/contact`, `/sign-in` and `/sign-up` public, no routes ignored and all remaining routes protected.
+
+```ts filename="middleware.ts" {3,4,5}
+import { authMiddleware } from "@clerk/nextjs";
+
+export default authMiddleware({
+  publicRoutes: ["/", "/contact"],
+});
+
+export const config = {
+  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+};
+
+```
+
 ### Using `afterAuth()` for fine-grained control
 
 Some developers will need to handle specific cases such as handling redirects differently or detecting if a user is inside an organization. These cases can be handled with `afterAuth()`.
@@ -40,14 +67,51 @@ export default authMiddleware({
     if (!auth.userId && !auth.isPublicRoute) {
       return redirectToSignIn({ returnBackUrl: req.url });
     }
-    // redirect them to organization selection page
+    // redirect logged in user to organization selection page if they are not active in an organization
     if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
       const orgSelection = new URL('/org-selection', req.url)
       return NextResponse.redirect(orgSelection)
     }
+    // if the user is logged in and trying to access a protected route, allow them to access route
+    if (auth.userId && !auth.isPublicRoute) {
+      return NextResponse.next()
+    }
+    // allow users visiting public routes to access them
+    return NextResponse.next();
   }
 });
 ```
+
+#### Understanding `afterAuth` configuration
+
+When using `afterAuth` the checks must handle all cases -- a custom `afterAuth` completely overrides the default behaviour covered earlier aside from adding sign-in and sign-up to `publicRoutes`. `afterAuth` does not allow you to add just one check and rely on the default behaviour otherwise. 
+
+Looking at the example immediately above, the following is happening:
+
+1. Redirect all users who are not logged in but who are visiting a protected page to the sign-in route.
+```ts 
+if (!auth.userId && !auth.isPublicRoute) {
+      return redirectToSignIn({ returnBackUrl: req.url });
+    }
+```
+2. If the user is signed in but is not currently active in an organization and is not visiting the route for selecting an org, then redirect them to the organization selector. This will force users to select and be active in an organization to visit other parts of the site.
+```ts 
+if(auth.userId && !auth.orgId && req.nextUrl.pathname !== "/org-selection"){
+      const orgSelection = new URL('/org-selection', req.url)
+      return NextResponse.redirect(orgSelection)
+    }
+```
+3. If the user is signed in and accessing a protected route, allow them to access it.
+```ts 
+ if (auth.userId && !auth.isPublicRoute) {
+      return NextResponse.next()
+    }
+```
+4. If none of the above match, then the user is visiting a public route. Allow them to. Don't check if they are logged in -- it doesn't matter
+```ts 
+return NextResponse.next();
+```
+
 
 ### Using `beforeAuth()` to execute middleware before authentication
 
@@ -79,7 +143,7 @@ export const config = {
 };
 ```
 
-### Making pages public using `publicRoutes`
+### Controlling public routes using `publicRoutes`
 
 By default, Clerk's `authMiddleware()` treats all routes as private if the middleware runs. If you need to make specific routes public, use the `publicRoutes` option.
 
@@ -95,6 +159,42 @@ export const config = {
 };
 ```
 
+You can use the `req` object to match against urls. The following example will make all routes but `/dashboard` public.
+
+```ts filename="middleware.ts" {4}
+import { authMiddleware } from "@clerk/nextjs";
+
+export default authMiddleware({
+  publicRoutes: req => !req.url.includes('/dashboard')
+})
+
+export const config = {
+  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+};
+```
+
+```ts filename="middleware.ts"
+export default authMiddleware({
+  publicRoutes: req => !req.url.includes('/dashboard')
+})
+```
+
+
+You can also use regex to match routes. The following is an example of a negative assertion that makes only the `/admin` protected.
+
+```ts filename="middleware.ts" {4}
+import { authMiddleware } from "@clerk/nextjs";
+
+export default authMiddleware({
+  publicRoutes:['((?!^/admin/).*)']
+})
+
+export const config = {
+  matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+};
+```
+
+
 If you are building your own sign in pages, you don't need to add these pages to your `publicRoutes`. They will be inferred from your `.env` file:
 
 ```ts filename=".env"
@@ -109,6 +209,22 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 If you define an `afterAuth` function, it will run even if the request corresponds to a private route and no user is signed in. If you don’t define an `afterAuth` function, a redirect response to the `signInUrl` will be returned automatically. This diagram explains how and when the two handlers are invoked in the runtime.
 
 ![Execution order of `beforeAuth`, `publicRoutes`, and `afterAuth`](/docs/images/nextjs/middleware-flow-chart.png)
+
+## Debugging your middleware
+
+If you are having issues getting your Middleware dialed in, or are trying to narrow down auth related issues you can use the debugging feature in authMiddlware. Add `debug: true` to `authMiddlware` and you will get a debug log to your development terminal or your server logs. 
+
+```ts filename="middleware.ts" {4}
+import { authMiddleware } from "@clerk/nextjs";
+export default authMiddleware({
+  publicRoutes: ["/"]
+  debug: true
+});
+
+export const config = {
+      matcher: ['/((?!.+\\.[\\w]+$|_next).*)', '/', '/(api|trpc)(.*)'],
+};
+```
 
 ## Options
 
