--- a/docs/troubleshooting/create-a-minimal-reproduction.mdx
+++ b/docs/troubleshooting/create-a-minimal-reproduction.mdx
@@ -69,7 +69,7 @@ Add a README file to the root of the repository that contains the steps that mus
 
 </Steps>
 
-It’s important throughout this process to be vigilant about removing code that is not necessary to produce the issue. The ideal result is that the repository gets to the state where the exact same issue is able to be produced, with the fewest lines of code possible to get to that point (beyond the baseline included in the starter templates).
+It’s important throughout this process to be vigilant about removing code that is not necessary to produce the issue. The ideal result is that the repository gets to the state where the exact same issue is able to be produced, with the fewest lines of code possible to get to that point (beyond the baseline included in the templates).
 
 Often times, the process of creating the minimal reproduction will clarify or resolve the original issue. This is great, if it does happen! That is the magic of minimal reproductions.
 
@@ -80,8 +80,7 @@ The Clerk support team **requires** minimal reproductions in order to start look
 ### Submission requirements
 
 Before submitting a minimal reproduction to the Clerk support team, ensure that the repository:
-- Is based off one of the starter templates above
-- Contains a minimal reproduction
+- Is based off one of the templates above and contains a minimal reproduction *or* has been stripped down to the bare minimum code needed to reproduce the issue
 - Contains a README file with the steps that must be taken in the app in order to produce the error
 
 ### Submission do's
