DOCS-267 Use new `type` property to sync `<CodeBlockTabs/>` and `<Tabs/>` instances (#499)

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -30,7 +30,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/nextjs/overview#client-side-helpers), and [helpers](/docs/references/nextjs/overview) for Next.js Server Components, Route Handlers and Middleware. Install it by running the following command in your terminal:
 
 
-<CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
   npm install @clerk/nextjs
   ```
@@ -67,9 +67,8 @@ This sets your public and secret keys.
 
 The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/nextjs'` at the top of your file. 
 
-<Tabs items={["App Router", "Pages Router"]}>
+<Tabs type="router" items={["App Router", "Pages Router"]}>
   <Tab>
-    
     <Callout>
       The `app/layout.tsx` file might be in your `src` folder if it isn't in your root folder.
     </Callout>
@@ -148,7 +147,7 @@ Clerk offers a set of [prebuilt components](/docs/components/overview) to add fu
 
 Add it anywhere inside `<ClerkProvider />` in your app. First add `import { UserButton } from "@clerk/nextjs";` to the top of your file. Then add `<UserButton afterSignOutUrl="/"/>`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out.
 
-<CodeBlockTabs options={["App Router", "Pages Router"]}>
+<CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.tsx" {1,6}
 import { UserButton } from "@clerk/nextjs";
 
