clarify on the limit param

--- a/docs/references/backend/organization/get-organization-membership-list.mdx
+++ b/docs/references/backend/organization/get-organization-membership-list.mdx
@@ -18,7 +18,7 @@ const memberships = await clerkClient.organizations.getOrganizationMembershipLis
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The ID of the organization to retrieve the list of memberships from. |
-| `limit?` | `number` | The number of results to return. |
+| `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 
 ## Examples
