--- a/docs/references/backend/organization/get-organization-list.mdx
+++ b/docs/references/backend/organization/get-organization-list.mdx
@@ -16,7 +16,7 @@ getOrganizationList();
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `limit?` | `number` | The number of results to return. |
+| `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 | `query?` | `string` | A search query to filter organizations by. |
 
