--- a/docs/references/backend/organization/get-pending-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-pending-organization-invitation-list.mdx
@@ -18,7 +18,7 @@ const invitations = await clerkClient.organizations.getPendingOrganizationInvita
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The ID of the organization to retrieve the list of pending invitations from. |
-| `limit?` | `number` | The number of results to return. |
+| `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 
 ## Examples
