update the opt out section's structure and utilize codeblocktabs for examples

--- a/docs/telemetry.mdx
+++ b/docs/telemetry.mdx
@@ -62,53 +62,55 @@ We will never share with or sell telemetry data to third parties. The data is us
 
 ## How do I opt-out?
 
-For meta-framework SDKs, you can opt-out of telemetry collection by setting the environment variable: `CLERK_TELEMETRY_DISABLED=1`. Note that the variable name might differ between frameworks.
+### Environment variables
 
-If you are using `@clerk/clerk-react` directly, or using an SDK that doesn't have environment variable support, you can opt out by passing the follow prop to `<ClerkProvider />`:
+<Callout type="warning">
+  Note that the variable name might differ between frameworks. See the [framework specific instructions]() below.
+</Callout>
+
+For meta-framework SDKs, you can opt-out of telemetry collection by setting the environment variable: 
+
+```env filename=".env.local"
+CLERK_TELEMETRY_DISABLED=1`.
+``` 
+
+### `telemetry` prop
+
+If you are using `@clerk/clerk-react` directly, or using an SDK that doesn't have environment variable support, you can opt out by passing the `telemetry` prop to `<ClerkProvider />`:
 
 ```tsx
-<ClerkProvider telemetry={false}>
+<ClerkProvider telemetry={false} />
 ```
 
-### Next.js
+### Framework specific instructions
 
+<CodeBlockTabs options={["Next.js", "React", "Remix", "Gatsby", "JavaScript", "Chrome Extension", "Expo"]}>
 ```tsx
 NEXT_PUBLIC_CLERK_TELEMETRY_DISABLED=1
 ```
 
-### Remix
+```tsx
+<ClerkProvider telemetry={false} />
+```
 
 ```tsx
 CLERK_TELEMETRY_DISABLED=1
 ```
 
-### Gatsby
-
 ```tsx
 GATSBY_CLERK_TELEMETRY_DISABLED=1
 ```
-
-### React
-
-```tsx
-<ClerkProvider telemetry={false}>
-```
-
-### Vanilla JavaScript
 
 ```js
 const clerk = new Clerk(publishableKey)
 c.load({ telemetry: false })
 ```
 
-### Chrome extension
-
 ```tsx
-<ClerkProvider telemetry={false}>
+<ClerkProvider telemetry={false} />
 ```
 
-### Expo
-
 ```tsx
-<ClerkProvider telemetry={false}>
+<ClerkProvider telemetry={false} />
 ```
+</CodeBlockTabs>
