--- a/docs/telemetry.mdx
+++ b/docs/telemetry.mdx
@@ -71,7 +71,7 @@ We will never share with or sell telemetry data to third parties. The data is us
 For meta-framework SDKs, you can opt-out of telemetry collection by setting the environment variable: 
 
 ```env filename=".env.local"
-CLERK_TELEMETRY_DISABLED=1`.
+CLERK_TELEMETRY_DISABLED=1
 ``` 
 
 ### `telemetry` prop
