adding deployment step to Next quickstart and swapping 'deployments and migrations' in navigation to reflect ordering of content in that section

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -180,6 +180,10 @@ export default function Home() {
 
 Visit your Next.js application at [`localhost:3000`](http://localhost:3000), click on your avatar, and select "sign out." You are now back where you started—a sign in form.
 
+### Deploy your application
+
+You're ready to [deploy your app to production](/docs/deployments/overview) and welcome new users!
+
 </Steps>
 
 ## You're authenticated!
