--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -210,7 +210,7 @@ If you define an `afterAuth` function, it will run even if the request correspon
 
 ![Execution order of `beforeAuth`, `publicRoutes`, and `afterAuth`](/docs/images/nextjs/middleware-flow-chart.png)
 
-## Debugging your middleware
+## Debug your middleware
 
 If you are having issues getting your Middleware dialed in, or are trying to narrow down auth related issues you can use the debugging feature in authMiddlware. Add `debug: true` to `authMiddlware` and you will get a debug log to your development terminal or your server logs. 
 
