--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -159,7 +159,7 @@ export const config = {
 };
 ```
 
-You can use the `req` object to match against urls. The following example will make all routes but `/dashboard` public.
+Use the `req` object to match against urls. The following example makes all routes but `/dashboard` public.
 
 ```ts filename="middleware.ts" {4}
 import { authMiddleware } from "@clerk/nextjs";
