fixing borked links

--- a/docs/guides/user-lock-guide.mdx
+++ b/docs/guides/user-lock-guide.mdx
@@ -33,5 +33,5 @@ alt="The Clerk component login form with a red alert stating 'Your account is lo
 />
 
 <Callout type="info">
-Currently, users cannot unlock their own account or submit a request to the admin to be unlocked ("self-service unlock"). This is an upcoming feature, so please check our [changelog](/blog) periodically to find out when it is available. Until then, you can [programmatically lock and unlock user accounts with a custom flow](/docs/guides/programmatically-unlock-user-accounts).
+Currently, users cannot unlock their own account or submit a request to the admin to be unlocked ("self-service unlock"). This is an upcoming feature, so please check our [changelog](https://clerk.com/blog) periodically to find out when it is available. Until then, you can [programmatically lock and unlock user accounts with a custom flow](/docs/guides/programmatically-lock-user-accounts).
 </Callout>
