--- a/docs/guides/unlock-user-accounts.mdx
+++ b/docs/guides/unlock-user-accounts.mdx
@@ -3,7 +3,7 @@ title: Unlock user accounts from the Clerk Dashboard
 description: 
 ---
 
-# Override a lockout
+# Unlock user accounts from the Clerk Dashboard
 
 <Callout type="info">
 This feature is only available for user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
