fix: Replace deprecated setSession with setActive for magic-links
GH comment: https://github.com/clerk/javascript/pull/1800#issuecomment-1824781134

--- a/docs/custom-flows/embedded-magic-links.mdx
+++ b/docs/custom-flows/embedded-magic-links.mdx
@@ -56,12 +56,12 @@ export const getServerSideProps: GetServerSideProps = async (context) => {
 const AcceptToken = ({
   signInToken,
 }: InferGetServerSidePropsType<typeof getServerSideProps>) => {
-  const { signIn, setSession } = useSignIn();
+  const { signIn, setActive } = useSignIn();
   const { user } = useUser();
   const [signInProcessed, setSignInProcessed] = useState<boolean>(false);
 
   useEffect(() => {
-    if (!signIn || !setSession || !signInToken) {
+    if (!signIn || !setActive || !signInToken) {
       return;
     }
 
@@ -72,9 +72,9 @@ const AcceptToken = ({
           strategy: "ticket",
           ticket: signInToken as string,
         });
-
-        setSession(res.createdSessionId, () => {
-          setSignInProcessed(true);
+        setActive({
+          session: res.createdSessionId,
+          beforeEmit: () => setSignInProcessed(true)
         });
       } catch (err) {
         setSignInProcessed(true);
@@ -82,7 +82,7 @@ const AcceptToken = ({
     };
 
     aFunc();
-  }, [signIn, setSession]);
+  }, [signIn, setActive]);
 
   if (!signInToken) {
     return <div>no token provided</div>;
@@ -107,7 +107,7 @@ export default AcceptToken;
 const queryParams = new URLSearchParams(window.location.search);
 const signInToken = queryParams.get('token');
 
-const { signIn, setSession } = useSignIn();
+const { signIn, setActive } = useSignIn();
 
 // Create a sign in with the ticket strategy, and the sign-in-token
 const res = await signIn.create({
@@ -116,6 +116,9 @@ const res = await signIn.create({
 });
 
 // Set the session as active, and then do whatever you need to!
-setSession(res.createdSessionId, () => console.log("SignedIn!"));
+setActive({
+  session: res.createdSessionId,
+  beforeEmit: () => console.log("SignedIn!")
+});
 ```
 </CodeBlockTabs>
