fix: Replace deprecated setSession with setActive

--- a/docs/custom-flows/multi-session-applications.mdx
+++ b/docs/custom-flows/multi-session-applications.mdx
@@ -112,21 +112,21 @@ const activeUser = window.Clerk.user;
 ```jsx
 import { useClerk } from "@clerk/clerk-react";
 
-const { client, setSession } = useClerk();
+const { client, setActive } = useClerk();
 
 // You can retrieve all the available sessions through the client
 const availableSessions = client.sessions;
 
-// Use setSession to set the active session.
-setSession(availableSessions[0].id);
+// Use setActive to set the active session.
+setActive({ session: availableSessions[0].id });
 ```
 
 ```js
 // You can retrieve all the available sessions through the client
 const availableSessions = window.Clerk.client.sessions;
 
-// Use setSession to set the active session.
-window.Clerk.setSession(availableSessions[0].id);
+// Use setActive to set the active session.
+window.Clerk.setActive({ session: availableSessions[0].id });
 ```
 </CodeBlockTabs>
 
