--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -172,8 +172,8 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 | Values | Description |
 | --- | --- |
 | `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
-| `setSession()` | A function that sets the active session. |
+| `setActive()` | A function that sets the active session. |
+| `setSession()` | A function that sets the active session. Use `setActive()` instead. |
 | `signIn` | An object that contains the current sign-in attempt status and methods to create a new sign-in attempt. |
 
 ### Result Status
