--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -177,8 +177,8 @@ The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javas
 | Values | Description |
 | --- | --- |
 | `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
-| `setSession()` | A function that sets the active session. |
+| `setActive()` | A function that sets the active session. |
+| `setSession()` | A function that sets the active session. Use `setActive()` instead. |
 | `signUp` | An object that contains the current sign-up attempt status and methods to create a new sign-up attempt. |
 
 ### Result Status
