--- a/docs/guides/customize-user-lockout.mdx
+++ b/docs/guides/customize-user-lockout.mdx
@@ -6,7 +6,7 @@ description:
 # Customize the max attempts before getting locked out and duration of lock out
 
 <Callout type="info">
-This feature is only available for user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
+This feature is applicable to user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) or [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
 </Callout>
 
 1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
