--- a/docs/guides/unlock-user-accounts.mdx
+++ b/docs/guides/unlock-user-accounts.mdx
@@ -6,7 +6,7 @@ description:
 # Unlock user accounts from the Clerk Dashboard
 
 <Callout type="info">
-This feature is only available for user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) and [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
+This feature is applicable to user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) or [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
 </Callout>
 
 Users with admin roles can override lockouts through the Clerk dashboard.
