--- a/docs/guides/unlock-user-accounts.mdx
+++ b/docs/guides/unlock-user-accounts.mdx
@@ -1,6 +1,6 @@
 ---
 title: Unlock user accounts from the Clerk Dashboard
-description: 
+description: Use the Clerk Dashboard to unlock user accounts.
 ---
 
 # Unlock user accounts from the Clerk Dashboard
