--- a/docs/guides/user-lock-guide.mdx
+++ b/docs/guides/user-lock-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: Brute force attacks and locking user accounts
-description: 
+description: User information is aprime target for malicious activity. Clerk protects your users against brute force attacks by locking out accounts with too many login attempts until a set period of time has passed.
 ---
 
 # Brute force attacks and locking user accounts
