chore(backend,types): Introduce PaginatedRequest type to re-use across javascript docs

--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -172,8 +172,7 @@ To see a demo application utilising the hook and the organizations feature, take
 
 | Properties | Description |
 | --- | --- |
-| `initialPage?` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. Defaults to `1`. |
-| `pageSize?` | A number that indicates the maximum number of results that should be returned for a specific page. Defaults to `10`. |
+(TODO: extend PaginatedRequest)
 | `keepPreviousData?` | If `true`, it will persist the cached data until the new data has been fetched. Defaults to `false`. |
 | `infinite?` | If `true`, the new downloaded data will be appended to the list with the existing data. Ideal for infinite lists. Defaults to `false`. |
 
