--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -19,8 +19,7 @@ function getInvitations(params?: GetInvitationsParams): Promise<PaginatedResourc
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
-| `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
+(TODO: extend PaginatedRequest)
 | `status?` | `'pending' \| 'accepted' \| 'revoked'` | The status an invitation can have. |
 
 ### Returns
