fix nav link and comment code

--- a/docs/roles-permissions/permissions-show-hide-content.mdx
+++ b/docs/roles-permissions/permissions-show-hide-content.mdx
@@ -7,7 +7,7 @@ description:
 
 ## Outcomes
 
-- use <Gate /> on the frontend
+- use `<Gate />` on the frontend
 - be able to use has in a custom flow to hide sections of content to users with different roles
 
 ## Note
