--- a/docs/references/react/use-session.mdx
+++ b/docs/references/react/use-session.mdx
@@ -65,5 +65,5 @@ export default function Home() {
 | --- | --- |
 | `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
 | `setActive()` | A function that sets the active session. |
-| `setSession()` | A function that sets the active session. Use `setActive()` instead.|
+| `setSession()` (deprecated) | A function that sets the active session. Use `setActive()` instead.|
 | `session` | Holds the current active session for the user. |
