--- a/docs/references/react/use-sign-in.mdx
+++ b/docs/references/react/use-sign-in.mdx
@@ -173,7 +173,7 @@ The `useSignIn()` hook provides access to the [`SignIn`](/docs/references/javasc
 | --- | --- |
 | `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
 | `setActive()` | A function that sets the active session. |
-| `setSession()` | A function that sets the active session. Use `setActive()` instead. |
+| `setSession()` (deprecated) | A function that sets the active session. Use `setActive()` instead. |
 | `signIn` | An object that contains the current sign-in attempt status and methods to create a new sign-in attempt. |
 
 ### Result Status
