--- a/docs/references/react/use-sign-up.mdx
+++ b/docs/references/react/use-sign-up.mdx
@@ -178,7 +178,7 @@ The `useSignUp()` hook gives you access to the [`SignUp`](/docs/references/javas
 | --- | --- |
 | `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
 | `setActive()` | A function that sets the active session. |
-| `setSession()` | A function that sets the active session. Use `setActive()` instead. |
+| `setSession()` (deprecated) | A function that sets the active session. Use `setActive()` instead. |
 | `signUp` | An object that contains the current sign-up attempt status and methods to create a new sign-up attempt. |
 
 ### Result Status
