Revised the quickstart guide and added separate react-router guide

--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -3,12 +3,34 @@ title: Use Clerk with React
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application.
 ---
 
-import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import { Images } from "@/components/Images";
-import {Cards} from "@/components/Cards";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
+<TutorialHero 
+  quickstart="react"
+  exampleRepo={[ 
+    {
+      title: "React Quickstart Repo",
+      link: "https://github.com/clerk/clerk-react-quickstart"
+      
+    }
+  ]}
+  beforeYouStart={[
+    {
+      title: "Set up a Clerk application",
+      link: "https://clerk.com/docs/quickstarts/setup-clerk"
+    },
+    {
+      title: "Create a React application using Vite",
+      link: "https://vitejs.dev/guide/#scaffolding-your-first-vite-project"
+    }
+  ]}
+>
+- Use Clerk with React
+- Install `@clerk/clerk-react`
+- Set environment keys
+- Wrap your app in `<ClerkProvider />`
+- Embed the `<UserButton />` and `<SignInButton />`
+</TutorialHero>
+
+
 
 # Use Clerk with React
 
@@ -16,21 +38,50 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 <Steps>
 
+### Install React using Vite
+
+We don't recommend using `create-react-app` for scaffoling your new React application. Instead we recommend using Vite to setup your application. 
+
+<CodeBlockTabs type="installer" options={["npm", "pnpm", "yarn"]}>
+  ```bash filename="terminal"
+  npm create vite@latest clerk-react -- --template react-ts
+  cd clerk-react
+  npm install
+  npm run dev
+
+  ```
+
+  ```bash filename="terminal"
+  pnpm create vite clerk-react --template react-ts
+  cd clerk-react
+  pnpm install
+  pnpm dev
+  ```
+
+  ```bash filename="terminal"
+  yarn create vite clerk-react--template react-ts
+  cd clerk-react
+  yarn install
+  yarn dev
+  ```
+</CodeBlockTabs>
+
+
 ### Install `@clerk/clerk-react`
 
-Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
+Clerk's React SDK gives you access to prebuilt components, hooks, and helpers for React. Install it by running the following command in your terminal:
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "pnpm", "yarn" ]}>
   ```bash filename="terminal"
   npm install @clerk/clerk-react
   ```
 
   ```bash filename="terminal"
-  yarn add @clerk/clerk-react
+  pnpm add @clerk/clerk-react
   ```
 
   ```bash filename="terminal"
-  pnpm add @clerk/clerk-react
+  yarn add @clerk/clerk-react
   ```
 </CodeBlockTabs>
 
@@ -41,216 +92,79 @@ Below is an example of an .env file. If you are signed into your Clerk Dashboard
 <InjectKeys>
 
 ```sh filename=".env"
-REACT_APP_CLERK_PUBLISHABLE_KEY={{pub_key}}
+VITE_CLERK_PUBLISHABLE_KEY={{pub_key}}
 ```
 
 </InjectKeys>
 
-### Configure `<ClerkProvider />`
+### Wrap your app in `<ClerkProvider />`
 
-Clerk requires your React application to be wrapped in the [`<ClerkProvider />`](/docs/components/clerk-provider) component. The `<ClerkProvider />` component provides active session and user context to Clerk's hooks and other components.
-
-```tsx filename="app.tsx"
-import React from "react";
-import "./App.css";
-import { ClerkProvider } from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw new Error("Missing Publishable Key")
-}
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider publishableKey={clerkPubKey}>
-      <div>Hello from clerk</div>
-    </ClerkProvider>
-  );
-}
-
-export default App;
-```
-
-### Protecting your pages
-
-Clerk offers [Control Components](/docs/components/overview) that allow you to protect your pages. These components are used to control the visibility of your pages based on the user's authentication state.
-
-```tsx filename="app.tsx"
-import React from "react";
-import "./App.css";
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  UserButton,
-  useUser,
-  RedirectToSignIn,
-} from "@clerk/clerk-react";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
-  throw "Missing Publishable Key"
-}
-
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function App() {
-  return (
-    <ClerkProvider publishableKey={clerkPubKey}>
-      <SignedIn>
-        <Welcome />
-      </SignedIn>
-      <SignedOut>
-        <RedirectToSignIn />
-      </SignedOut>
-    </ClerkProvider>
-  );
-}
-
-function Welcome() {
-  return <div>Hello you are signed in</div>;
-}
-
-export default App;
-```
-
-<Callout type="info" emoji="🎉">
- At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box.
-Start your React application via `npm run start`, visit `http://localhost:3000`, and sign up to get access to your application.
-</Callout>
+The [`<ClerkProvider />`](/docs/components/clerk-provider) component provides active session and user context to Clerk's hooks and other components. Import it into your app by adding `import { ClerkProvider } from '@clerk/clerk-react'` at the top of your file. You will need to import your Publishable Key and provide it to your `<ClerkProvider />` using the `publishableKey` prop. 
 
 
-#### Using a routing library with Clerk
+```tsx filename="src/main.tsx" {5, 7, 9-11, 15, 17}
+import React from 'react'
+import ReactDOM from 'react-dom/client'
+import App from './App.tsx'
+import './index.css'
+import { ClerkProvider } from '@clerk/clerk-react'
 
-Clerk can work with any routing library. Below is an example of how to use Clerk with React Router and how to embed the Clerk components in your application.
+const PUBLISHABLE_KEY = import.meta.env.VITE_CLERK_PUBLISHABLE_KEY
 
-```tsx filename="app.tsx"
-import {
-  ClerkProvider,
-  SignedIn,
-  SignedOut,
-  RedirectToSignIn,
-  SignIn,
-  SignUp,
-  UserButton,
-} from "@clerk/clerk-react";
-import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
-
-if (!process.env.REACT_APP_CLERK_PUBLISHABLE_KEY) {
+if (!PUBLISHABLE_KEY) {
   throw new Error("Missing Publishable Key")
 }
 
-const clerkPubKey = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-function PublicPage() {
-  return (
-    <>
-      <h1>Public page</h1>
-      <a href="/protected">Go to protected page</a>
-    </>
-  );
-}
-
-function ProtectedPage() {
-  return (
-    <>
-      <h1>Protected page</h1>
-      <UserButton />
-    </>
-  );
-}
-
-function ClerkProviderWithRoutes() {
-  const navigate = useNavigate();
-
-  return (
-    <ClerkProvider
-      publishableKey={clerkPubKey}
-      navigate={(to) => navigate(to)}
-    >
-      <Routes>
-        <Route path="/" element={<PublicPage />} />
-        <Route
-          path="/sign-in/*"
-          element={<SignIn routing="path" path="/sign-in" />}
-        />
-        <Route
-          path="/sign-up/*"
-          element={<SignUp routing="path" path="/sign-up" />}
-        />
-        <Route
-          path="/protected"
-          element={
-          <>
-            <SignedIn>
-              <ProtectedPage />
-            </SignedIn>
-            <SignedOut>
-              <RedirectToSignIn />
-            </SignedOut>
-          </>
-          }
-        />
-      </Routes>
+ReactDOM.createRoot(document.getElementById('root')!).render(
+  <React.StrictMode>
+    <ClerkProvider publishableKey={PUBLISHABLE_KEY}>
+      <App />
     </ClerkProvider>
-  );
-}
+  </React.StrictMode>,
+)
+```
+### Embed the `<UserButton />` and `<SignInButton />`
+
+Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<UserButton />`](/docs/components/user/user-button) allows users to manage their account information and log out, completing the full authentication circle.The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) is an unstyled component that you can use to either create a basic button or to wrap around your styled button and turn it into a Sign In button.
+
+Lastly you will use the [`<SignedIn />`](/docs/components/control/signed-in) and [`<SignedOut />`](/docs/components/control/signed-out) control components. These will allow you to render the `<UserButton />` only to users who are signed in and `<SignInButton />` only to users who are signed out.
+
+Add the following anywhere inside `<ClerkProvider />` in your app. First add `import { UserButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react";` to the top of your file. Then add the following somewhere inside of your application -- a header area is a great place. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out.
+
+```tsx filename="src/App.tsx {1, 7-12}
+import { SignInButton, SignedIn, SignedOut, UserButton } from "@clerk/clerk-react"
 
 function App() {
-  return (
-    <BrowserRouter>
-      <ClerkProviderWithRoutes />
-    </BrowserRouter>
-  );
-}
-
-export default App;
-```
-
-### Read session and user data
-
-Clerk provides a set of [hooks and helpers](/docs/references/react/use-user) that you can use to access the active session and user data in your React application. Here are examples of how to use these helpers.
-
-#### `useAuth`
-
-The [`useAuth`](/docs/references/react/use-auth) hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
-
-```tsx filename="pages/example.tsx"
-import { useAuth } from "@clerk/clerk-react";
-
-export default function Example() {
-  const { isLoaded, userId, sessionId, getToken } = useAuth();
-
-  // In case the user signs out while on the page.
-  if (!isLoaded || !userId) {
-    return null;
-  }
 
   return (
     <div>
-      Hello, {userId} your current active session is {sessionId}
+      <SignedOut>
+        <SignInButton />
+      </SignedOut>
+      <SignedIn>
+        <UserButton afterSignOutUrl="/" />
+      </SignedIn>
     </div>
-  );
+  )
 }
+
+export default App
 ```
 
-#### `useUser`
+If you removed the Vite boilerplate from `App.tsx` by copying and pasting the boce, you probably want to also delete `src/App.css` and `src/assets/react.svg`.
 
-The [`useUser`](/docs/references/react/use-user) hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
-
-```tsx filename="pages/example.tsx"
-import { useUser } from "@clerk/clerk-react";
-
-export default function Example() {
-  const { isLoaded, isSignedIn, user } = useUser();
-
-  if (!isLoaded || !isSignedIn) {
-    return null;
-  }
-
-  return <div>Hello, {user.firstName} welcome to Clerk</div>;
-}
-```
 </Steps>
+
+## You're authenticated!
+
+Congratulations! Your app is now only available to authenticated users! But this is just the first step. If you would like to clone or investiage this application, please check out:
+
+* [Clerk + React Quickstart](https://github.com/clerk/clerk-react-quickstart)
+
+## Add routing to your Clerk Powered application
+
+React has many options for handling routing and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API based router (nicknamed Data Router) please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide. 
+
 
 ### Next steps
 
