Minor updates from PR review

--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -39,7 +39,7 @@ If there is no `afterAuth` present in the middleware, then `authMiddleware` will
 
 #### Example
 
-Assuming that the .env based settings are for sign-in and sign-up are set to /sign-in and /sign-up resepctively, the following `authMiddleware` would make the routes `/`, `/contact`, `/sign-in` and `/sign-up` public, no routes ignored and all remaining routes protected.
+Assuming that the `.env` based settings are for sign-in and sign-up are set to `/sign-in` and `/sign-up` resepctively, the following `authMiddleware` would make the routes `/`, `/contact`, `/sign-in` and `/sign-up` public, no routes ignored and all remaining routes protected.
 
 ```ts filename="middleware.ts" {3,4,5}
 import { authMiddleware } from "@clerk/nextjs";
@@ -143,7 +143,7 @@ export const config = {
 };
 ```
 
-### Controlling public routes using `publicRoutes`
+### Making routes public using `publicRoutes`
 
 By default, Clerk's `authMiddleware()` treats all routes as private if the middleware runs. If you need to make specific routes public, use the `publicRoutes` option.
 
