remove broken link and updated deprecated backend resource

--- a/docs/references/ruby/available-methods.mdx
+++ b/docs/references/ruby/available-methods.mdx
@@ -100,7 +100,11 @@ Verify whether a session with a given ID corresponds to the provided session tok
 sdk.sessions.verify_token("sess_xyz", "jwt")
 ```
 
-## [SMS Messages](https://clerk.com/docs/reference/backend-api/tag/SMS-Messages)
+## SMS Messages (deprecated)
+
+<Callout type="danger">
+  This resource is deprecated. Clerk no longer supports sending SMS messages through Clerk's backend API.
+</Callout>
 
 Send an SMS message to a phone number ID belonging to another user.
 
