--- a/docs/references/javascript/types/paginated-request.mdx
+++ b/docs/references/javascript/types/paginated-request.mdx
@@ -9,7 +9,7 @@ An interface that describes the request params of a method that returns a pagina
 
 ## Properties
 
-| Properties | Type | Description |
+| Name | Type | Description |
 | --- | --- | --- |
 | `initialPage?` | `number` |  A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it will skip the first 9 pages and will fetch the 10th page. Defaults to `1`.|
 | `pageSize?` | `number` |  A number that indicates the maximum number of results that should be returned for a specific page. Defaults to `10`.|
