--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -32,7 +32,7 @@ With the recommended matcher, all routes are protected by Clerk's authentication
 If there is no `afterAuth` present in the middleware, then `authMiddleware` will fall back to its default behaviour. The default bahaviour is:
 
 - If the [`.env` based settings](/docs/references/nextjs/custom-signup-signin-pages#update-your-environment-variables) for the sign-in and sign-up routes are present, add those to any routes listed in `publicRoutes`.
-- If the .env based settings are not present, add `/sign-in` and `/sign-up` to any routes listed in `publicRoutes`.
+- If the `.env` based settings are not present, add `/sign-in` and `/sign-up` to any routes listed in `publicRoutes`.
 - Make all routes from `publicRoutes` public.
 - Configure all routes from `ignoredRoutes` to be ignored and return no auth related information.
 - Make all remaining routes protected.
