--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -113,7 +113,7 @@ return NextResponse.next();
 ```
 
 
-### Using `beforeAuth()` to execute middleware before authentication
+### Use `beforeAuth()` to execute middleware before authentication
 
 If you need additional middleware handlers to execute before Clerk's authentication middleware, use `beforeAuth()`. An example where the middleware handler from `next-intl` is executed can be seen below.
 
