--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -180,7 +180,7 @@ export default authMiddleware({
 ```
 
 
-You can also use regex to match routes. The following is an example of a negative assertion that makes only the `/admin` protected.
+You can also use regex to match routes. The following is an example of a negative assertion that makes *only* the `/admin` route protected.
 
 ```ts filename="middleware.ts" {4}
 import { authMiddleware } from "@clerk/nextjs";
