--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -84,7 +84,7 @@ export default authMiddleware({
 
 #### Understanding `afterAuth` configuration
 
-When using `afterAuth`, the checks must handle all cases—a custom `afterAuth` completely overrides the default behavior covered earlier aside from adding sign-in and sign-up to `publicRoutes`. `afterAuth` does not allow you to add just one check and rely on the default behavior otherwise. 
+When using `afterAuth`, the checks must handle all cases — a custom `afterAuth` completely overrides the default behavior covered earlier, aside from adding sign-in and sign-up to `publicRoutes`. `afterAuth` does not allow you to add just one check and rely on the default behavior otherwise. 
 
 Looking at the example immediately above, the following is happening:
 
