--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -54,7 +54,7 @@ export const config = {
 
 ```
 
-### Using `afterAuth()` for fine-grained control
+### Use `afterAuth()` for fine-grained control
 
 Some developers will need to handle specific cases such as handling redirects differently or detecting if a user is inside an organization. These cases can be handled with `afterAuth()`.
 
