--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -55,5 +55,5 @@ export default function Home() {
 | --- | --- |
 | `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
 | `setActive()` | A function that sets the active session. |
-| `setSession()` | A function that sets the active session. Use `setActive()` instead. |
+| `setSession()` (deprecated) | Deprecated in favor of `setActive()`. |
 | `sessions` | Holds an array of [`Session`](/docs/references/javascript/session) objects that have been registered on the client device. |
