--- a/docs/references/react/use-session-list.mdx
+++ b/docs/references/react/use-session-list.mdx
@@ -54,6 +54,6 @@ export default function Home() {
 | Values | Description |
 | --- | --- |
 | `isLoaded` | A boolean that is set to `false` until Clerk loads and initializes. |
-| `setActive()` | A function that sets the active session. In most cases, this should be used over `setSession()`. |
-| `setSession()` | A function that sets the active session. |
+| `setActive()` | A function that sets the active session. |
+| `setSession()` (deprecated) | Deprecated in favor of `setActive()`. |
 | `sessions` | Holds an array of [`Session`](/docs/references/javascript/session) objects that have been registered on the client device. |
