--- a/docs/security/overview.mdx
+++ b/docs/security/overview.mdx
@@ -16,5 +16,6 @@ This documentation lists some of the many protections included with Clerk. These
 - [CSRF Protection](/docs/security/csrf-protection)
 - [Fixation Protection](/docs/security/fixation-protection)
 - [Password protection and rules](/docs/security/password-protection)
+- [Brute force protection and user account locking](/docs/security/user-lock-guide)
 
 If we are missing a protection you would like to see, please reach out to security@clerk.dev and we will get back to you right away.
