chore: address pr comments

--- a/docs/references/javascript/organization-membership-request.mdx
+++ b/docs/references/javascript/organization-membership-request.mdx
@@ -1,11 +1,11 @@
 ---
 title: OrganizationMembershipRequest
-description: The OrganizationMembershipRequest object is the model that describes the request of a user to join an Organization.
+description: The OrganizationMembershipRequest object is the model that describes the request of a user to join an organization.
 ---
 
 # `OrganizationMembershipRequest`
 
-The `OrganizationMembershipRequest` object is the model that describes the request of a user to join an Organization.
+The `OrganizationMembershipRequest` object is the model that describes the request of a user to join an organization.
 
 ## Properties
 
@@ -23,7 +23,7 @@ The `OrganizationMembershipRequest` object is the model that describes the reque
 
 ## `accept()`
 
-Accepts the request of a user to join the Organization the request refers to.
+Accepts the request of a user to join the organization the request refers to.
 
 ```typescript
 function accept(): Promise<OrganizationMembershipRequest>;
@@ -33,12 +33,12 @@ function accept(): Promise<OrganizationMembershipRequest>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembershipRequest][mem-request-ref]\></code> | This method returns a `Promise` which resolves with an [`OrganizationMembershipRequest`][mem-request-ref] instance. |
+| <code>Promise\<OrganizationMembershipRequest\></code> | This method returns a `Promise` which resolves with an `OrganizationMembershipRequest` instance. |
 
 
 ## `reject()`
 
-Rejects the request of a user to join the Organization the request refers to.
+Rejects the request of a user to join the organization the request refers to.
 
 ```typescript
 function reject(): Promise<OrganizationMembershipRequest>;
@@ -48,6 +48,4 @@ function reject(): Promise<OrganizationMembershipRequest>;
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[OrganizationMembershipRequest][mem-request-ref]\></code> | This method returns a `Promise` which resolves with an [`OrganizationMembershipRequest`][mem-request-ref] instance. |
-
-[mem-request-ref]: /docs/references/javascript/organization-membership-request
+| <code>Promise\<OrganizationMembershipRequest\></code> | This method returns a `Promise` which resolves with an `OrganizationMembershipRequest` instance. |
