--- a/docs/references/javascript/organization/membership-request.mdx
+++ b/docs/references/javascript/organization/membership-request.mdx
@@ -1,15 +1,15 @@
 ---
-title: Organization Membership Request
-description: These are all methods on the Organization class that allow you to manage the membership requests for an organization.
+title: Organization membership request
+description: These are methods on the Organization class that allow you to manage the membership requests for an organization.
 ---
 
-# Organization Membership Request
+# Organization membership requests
 
-These are all methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the membership requests for an organization.
+These are methods on the [Organization](/docs/references/javascript/organization/organization) class that allow you to manage the membership requests for an organization.
 
 ## `getMembershipRequests()`
 
-Retrieves a list of domains for the currently active organization.
+Retrieves a list of membership requests for the currently active organization.
 
 ```typescript
 function getMembershipRequests(params?: GetMembershipRequestParams): Promise<PaginatedResources<OrganizationMembershipRequest>>;
@@ -21,13 +21,13 @@ function getMembershipRequests(params?: GetMembershipRequestParams): Promise<Pag
 | --- | --- | --- |
 | `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
-| `status?` | `'pending' \| 'accepted' \| 'revoked'` | The status an request can have. |
+| `status?` | `'pending' \| 'accepted' \| 'revoked'` | The status a request can have. |
 
 ### Returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationMembershipRequest][mem-request-ref]\>></code> | This method returns a `Promise` which resolves with a list of [`OrganizationMembershipRequest`][mem-request-ref] objects. |
+| <code>Promise\<[PaginatedResponse][pag-res-ref]\<[OrganizationMembershipRequest][mem-request-ref]\>></code> | This method returns a `Promise` which resolves with a list of `OrganizationMembershipRequest` objects. |
 
 [mem-request-ref]: /docs/references/javascript/organization-membership-request
 [pag-res-ref]: /docs/references/javascript/types/paginated-response
