--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -105,7 +105,7 @@ You can create a custom button by wrapping your own button, or button text, in t
           <div>
           <h1> Sign out </h1>
             <SignOutButton>
-              <button>Sign in with Clerk</button>
+              <button>Sign out</button>
             </SignOutButton>
           </div>
         );
@@ -120,7 +120,7 @@ You can create a custom button by wrapping your own button, or button text, in t
           <div>
           <h1> Sign out </h1>
             <SignOutButton>
-              <button>Sign in with Clerk</button>
+              <button>Sign out</button>
             </SignOutButton>
           </div>
         );
@@ -138,7 +138,7 @@ You can create a custom button by wrapping your own button, or button text, in t
         <div>
         <h1> Sign out </h1>
           <SignOutButton>
-            <button>Sign in with Clerk</button>
+            <button>Sign out</button>
           </SignOutButton>
         </div>
       );
@@ -155,7 +155,7 @@ You can create a custom button by wrapping your own button, or button text, in t
         <div>
         <h1> Sign in </h1>
           <SignOutButton>
-            <button>Sign in with Clerk</button>
+            <button>Sign out</button>
           </SignOutButton>
         </div>
       );
@@ -172,7 +172,7 @@ You can create a custom button by wrapping your own button, or button text, in t
         <div>
         <h1> Sign out </h1>
           <SignOutButton>
-            <button>Sign in with Clerk</button>
+            <button>Sign out</button>
           </SignOutButton>
         </div>
       );
