--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -103,8 +103,7 @@ const signIn = await client.signIn.create({
 
 ### User locked
 
-If you have Account Lockout enabled on your instance and the user reaches the maximum allowed attempts for password or
-backup code verification, you will receive an HTTP status of 403 (Forbidden) and the following error payload:
+If you have Account Lockout enabled on your instance and the user reaches the maximum allowed attempts for password or backup code verification, you will receive an HTTP status of 403 (Forbidden) and the following error payload:
 
 
 ```json
@@ -122,6 +121,4 @@ backup code verification, you will receive an HTTP status of 403 (Forbidden) and
 }
 ```
 
-Note: Actual remaining duration will vary [depending on your configuration](/docs/security/customize-user-lockout).
-
-You can opt to render the error message returned as-is or format the supplied `duration_in_seconds` as per your liking.
+The remaining duration will vary [depending on your configuration](/docs/security/customize-user-lockout). You can opt to render the error message returned as-is or format the supplied `duration_in_seconds` as per your liking.
