--- a/docs/security/customize-user-lockout.mdx
+++ b/docs/security/customize-user-lockout.mdx
@@ -3,7 +3,7 @@ title: Customize max login attempts and duration of user lockout
 description: Use Clerk to limit the number of times a user can attempt to log in before they are locked out of their account and how long such lockouts last.
 ---
 
-# Customize the max attempts before getting locked out and duration of lock out
+# Customize max login attempts and duration of user lockout
 
 <Callout type="info">
 This feature is applicable to user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) or [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
