--- a/docs/security/customize-user-lockout.mdx
+++ b/docs/security/customize-user-lockout.mdx
@@ -1,6 +1,6 @@
 ---
 title: Customize max login attempts and duration of user lockout
-description: Use Clerk to limit the number of times a user can attempt to log in before they are locked out of their account and how long such lockouts last.
+description: Use Clerk to limit the number of times a user can attempt to log in before they are locked out of their account and customize how long such lockouts last.
 ---
 
 # Customize max login attempts and duration of user lockout
