--- a/docs/security/customize-user-lockout.mdx
+++ b/docs/security/customize-user-lockout.mdx
@@ -9,7 +9,7 @@ description: Use Clerk to limit the number of times a user can attempt to log in
 This feature is applicable to user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) or [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
 </Callout>
 
-1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
+1. In your Clerk Dashboard, navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
 2. To change the number of failed attempts before a user is locked out, under **Maximum attempts,** select "Custom attempts" and enter a new number of failed attempts allowed. (The default is 100 attempts.)
 3. To change the duration, under **Duration,** select "Custom duration" and select the unit of time (minutes/hours/days/years) and enter the number of units you want lockouts to last.
 4. Select "Apply changes" to apply your settings.
