--- a/docs/security/customize-user-lockout.mdx
+++ b/docs/security/customize-user-lockout.mdx
@@ -10,9 +10,9 @@ This feature is applicable to user accounts that use [passwords](https://dashboa
 </Callout>
 
 1. In your Clerk Dashboard, navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
-2. To change the number of failed attempts before a user is locked out, under **Maximum attempts,** select "Custom attempts" and enter a new number of failed attempts allowed. (The default is 100 attempts.)
-3. To change the duration, under **Duration,** select "Custom duration" and select the unit of time (minutes/hours/days/years) and enter the number of units you want lockouts to last.
-4. Select "Apply changes" to apply your settings.
+2. To change the number of failed attempts before a user is locked out, under **Maximum attempt limit,** enter a new number of failed attempts allowed. (The default is 100 attempts.)
+3. To change the duration, under **Lockout duration,** select "Time limit," select the unit of time (minutes/hours/days/years), and enter the number of units you want lockouts to last.
+4. Select "Save changes" to apply your settings.
 
 <Images
 width={1512}
@@ -24,8 +24,8 @@ alt=" "
 ## Lock a user account forever until an admin unlocks the account
 
 1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **User & Authentication > [Attack Protection](https://dashboard.clerk.com/last-active?path=user-authentication/attack-protection)**.
-2. Under **Duration,** select "Indefinitely."
-3. Select "Apply changes" to apply your settings.
+2. Under **Lockout duration,** select "Indefinite Lockout."
+3. Select "Save changes" to apply your settings.
 
 <Images
 width={1512}
