--- a/docs/security/programmatically-lock-user-accounts.mdx
+++ b/docs/security/programmatically-lock-user-accounts.mdx
@@ -3,7 +3,7 @@ title: Programmatically locking and unlocking user accounts
 description: Lock users to prevent them from signing in based on your own custom criteria.
 ---
 
-# Programmatically locking and unlocking user accounts
+# Programmatically lock and unlock user accounts
 
 ## Unlocking a user programmatically
 
