--- a/docs/security/programmatically-lock-user-accounts.mdx
+++ b/docs/security/programmatically-lock-user-accounts.mdx
@@ -1,5 +1,5 @@
 ---
-title: Programmatically locking and unlocking user accounts
+title: Programmatically lock and unlock user accounts
 description: Lock users to prevent them from signing in based on your own custom criteria.
 ---
 
