--- a/docs/security/programmatically-lock-user-accounts.mdx
+++ b/docs/security/programmatically-lock-user-accounts.mdx
@@ -13,7 +13,7 @@ You can programmatically unlock a user using the [UnlockUser](https://clerk.com/
 
 ### "Unlock button"
 
-Your custom sign-in page could expose a button or link to request an unlock token when they are locked out of their account.
+Your custom sign-in page could expose a button or link that allows the user to request an unlock token when they are locked out of their account.
 
 * Your app should be able to generate a random unlock token and associate it with the user.
 * The unlock token can be sent to the user via email or SMS.
