--- a/docs/security/programmatically-lock-user-accounts.mdx
+++ b/docs/security/programmatically-lock-user-accounts.mdx
@@ -26,7 +26,7 @@ If your app supports users submitting admin requests, it could expose a way of r
 * A request for unlock could arrive in your app's admin dashboard.
 * If an admin reviews the request and decides to grant access back to the user, they can request an unlock from your app's backend, which should in turn call the Clerk Backend API.
 
-# Locking a user programmatically
+## Lock a user programmatically
 
 You can programmatically lock a user based on your own custom criteria, e.g. if they are violating your app's code of conduct.
 
