--- a/docs/security/programmatically-lock-user-accounts.mdx
+++ b/docs/security/programmatically-lock-user-accounts.mdx
@@ -28,6 +28,8 @@ If your app supports users submitting admin requests, it could expose a way of r
 
 ## Lock a user programmatically
 
-You can programmatically lock a user based on your own custom criteria, e.g. if they are violating your app's code of conduct.
+You can programmatically lock a user using the  [LockUser](https://clerk.com/docs/reference/backend-api/tag/Users#operation/LockUser) Backend API operation. Keep in mind that Clerk will still lock the user based on failed verification attempts.
 
-You can do so via the [LockUser](https://clerk.com/docs/reference/backend-api/tag/Users#operation/LockUser) Backend API operation. Keep in mind that Clerk will still lock the user based on failed verification attempts.
+### Use cases
+
+* If a user is violating your app's code of conduct.
