--- a/docs/security/unlock-user-accounts.mdx
+++ b/docs/security/unlock-user-accounts.mdx
@@ -9,7 +9,7 @@ description: Use the Clerk Dashboard to unlock user accounts.
 This feature is applicable to user accounts that use [passwords](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username) or [backup codes](https://dashboard.clerk.com/last-active?path=user-authentication/multi-factor).
 </Callout>
 
-Users with admin roles can override lockouts through the Clerk dashboard.
+Users with admin roles can override lockouts through the Clerk Dashboard.
 
 1. In your [Clerk Dashboard](https://dashboard.clerk.com/), navigate to **[Users](https://dashboard.clerk.com/last-active?path=users)**.
 2. Locate the locked user by looking for a "locked" badge next to their username/email. 
